--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "platzi-intro",
+  "name": "platzi-intro-react-base",
   "version": "0.1.0",
-  "homepage": "https://jusanchezj.github.io/TODO-LIST.git/build",
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -30,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://jusanchezj.github.io/todo",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
